[workspace]
members = ["runner", "solutions"]
resolver = "3"

[profile.dev]
opt-level = 1               # slight optimization for faster dev iterations

[profile.dev-debug]
inherits = "dev"
opt-level = 0

[profile.release]
lto = true                  # link-time optimization
codegen-units = 1           # better optimization, slower compile for release profile
strip = true